2003-05-26 Rajkumar Sivasamy  <rajkumar.siva@wipro.com>

	Patch by: Deepa Natarajan  <deepa.natarajan@wipro.com>

        * mailcheck.c, mailcheck.schemas.in: Do a base64 encode
        of the remote_password and store it in a new gconf key
        "remote_encrypted_password", if store password checkbox
        is enabled. So that we dont store the password in plain
        text! Fixes Bug #99801

2003-05-25  Kevin Vandersloot <kfv101@psu.edu>

	* mailcheck.c: change behavior and pref so that when applet is clicked just
	stop animation. Previously there wasn't a way to actually set the number of unread
	mails to zero and hence the pref didn't make any sense. Fixes bug #112914. Also
	if no mail dir is located then set it to the user mail dir. Don't quit the applet if
	USER can be found

2003-05-22  Dennis Cranston <dennis_cranston at yahoo com>

	* mailcheck.c:  Correct grammar and capitalization for a few error messages.

2003-05-22  Kevin Vandersloot <kfv101@psu.edu>

	* mailcheck.c: Make the update interval spins behave more sensibaly my making
	1 sec the min. Fixes bug #86840. Also remove unused variable from last commit

2003-05-22  Kevin Vandersloot <kfv101@psu.edu>

	* mailcheck.c: don't pop up an error dialog on mail check failure. Just indicate in
	the label and set the tooltip to the error message. Fixes bug #83932

2003-05-20  Muktha <muktha.narayan@wipro.com>
       * mailcheck/mailcheck.c: Prevent creation of multiple processes for
       imap configuration. Fixes bug #113351.

2003-05-07  Dennis Cranston <dennis_cranston at yahoo com>

	* mailcheck.c:  HIGify the action area of the preferences 
	dialog.  Minor tweak of padding for the spin button unit 
	labels.
	
2003-04-26  Dennis Cranston <dennis_cranston at yahoo com>

	* mailcheck.c:  Minor HIGification of preferences dialog: 
	remove separator; fix widget padding.
	
2003-04-08  Dennis Cranston <dennis_cranston at yahoo.com>

	* mailcheck.c:  HIGify the preferences dialog. Also,