@@ -1,3 +1,8 @@
+2003-05-28  Kevin Vandersloot <kfv101@psu.edu>
+
+	* popcheck.c: up to timeout to 2 minutes so that checking doesn't fail if
+	under heavy loads. Should fix bug #91195
+
 2003-05-26 Rajkumar Sivasamy  <rajkumar.siva@wipro.com>
 
 	Patch by: Deepa Natarajan  <deepa.natarajan@wipro.com>
